# discord-ext-ipcx

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  changelog.md  lefthook.yml  pyproject.toml  requirements.txt  tox.ini
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  lint.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-approve.yml  build.yml  build_and_publish.yml  codeql.yml  dependabot-auto-merge.yml  lint.yml  publish.yml  release.yml  towncrier.yml
changelog.d/: 44.breaking.md  48.bugfix.md  49.doc.md  50.doc.md  51.misc.md  53.feature.md  54.bugfix.md  56.feature.md  57.doc.md  58.misc.md  59.doc.md  60.breaking.md  61.doc.md  62.doc.md
changes/: +35c08022.misc.md  64.misc.md
discord/ext/ipcx/: __init__.py  client.py  errors.py  server.py
docs/: Makefile  api.rst  conf.py  examples.rst  index.rst  requirements.txt
docs/source/: api.rst  conf.py  examples.rst  index.rst
examples/basic/: bot.py  webserver.py
examples/basic-ipc/: bot.py  webserver.py
examples/cog-based/: bot.py
examples/cog-based-ipc/: bot.py
examples/cog-based-ipc/cogs/: ipc.py
examples/fastapi/: bot.py  webserver.py
