[project]
name = "discord-ext-ipcx"
description = "Maintained and updated version of discord-ext-ipc for discord.py v2"
version = "0.2.2"
authors = [
    { name="No767", email="73260931+No767@users.noreply.github.com"}
]
maintainers = [
    { name="No767", email="73260931+No767@users.noreply.github.com"}
]
readme = "README.md"
dynamic = ["dependencies"]
requires-python = ">=3.8"
keywords = [
    "discord.py", 
    "asyncio", 
    "networking",
    "discord-ext-ipcx", 
    "discord-ext-ipc"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[project.urls]
Homepage = "https://github.com/No767/discord-ext-ipcx"
Documentation = "https://discord-ext-ipcx.readthedocs.io/en/latest/"
Repository = "https://github.com/No767/discord-ext-ipcx"
Issues = "https://github.com/No767/discord-ext-ipcx/issues"

[project.optional-dependencies]
docs = [
    "sphinx==7.4.7",
    "sphinx-autobuild>=2024.10.3,<2025",
    "furo>=2024.8.6,<2025",
    "sphinx-copybutton>=0.5.2,<1"
]

dev = [
    "lefthook>=1.8.1,<2",
    "pyright>=1.1.386,<2",
    "ruff>=0.7.1,<1",
    "tox>=4.23.2,<5",
    "quart>=0.19.8,<1"
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = [
    "discord.ext.ipcx"
]

[tool.pyright]
include = ["discord/ext/ipcx/**"]
exclude = [
    "**/__pycache__", 
    "**/.mypy_cache", 
    "**/.dmpypy.json", 
    "docs",
]
reportMissingImports = true
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = "warning"

[tool.ruff]
line-length = 88
include = ["discord/ext/ipcx/**", "examples/**"]

[tool.ruff.lint]
ignore = [
    "E501", 
    "N999", 
    "E402", 
    "S311",
    "S101",
    
    # These are recommended by Ruff if the formatter is to be used: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002"
    ]
select = ["E", "F", "N", "ASYNC", "S", "ERA"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
docstring-code-format = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
